-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.6.2
-
None
-
Mac OS X (probably other platforms too)
-
4a5e81f5320daa82352b13e670718998b0d2d23b
This simple example crashes on exit.
May I blame 57c7df82ffbace8924c7ac8875ef4343783a2376 for this?
#include <QtGui> QHash<QString, QPixmap> pixmapCache; int main(int argc, char *argv[]) { QApplication a(argc, argv); pixmapCache.insert("bla", QPixmap()); QWidget w; w.show(); return a.exec(); }