Fixed a crash when QPixmaps are destroyed after the ~QApplication.

Destroying QPixmaps after the QApp destructor will leak native pixmap
objects on X11, and it's a general rule that all GUI objects must
be destroyed before the QApp destuctor is called.

Task-number: QTBUG-7746
Reviewed-by: Kim
(cherry picked from commit 4a5e81f5320daa82352b13e670718998b0d2d23b)